...
                    Spacer()
                    Button(action: { self.userData.places[self.placesIndex].isVisited.toggle() }) {
                        if self.userData.places[self.placesIndex].isVisited {
                            Image(systemName: "bookmark.fill")
                                .imageScale(.medium)
                                .foregroundColor(.red)
                                .accessibility(identifier: "bookmarkFill")

                        } else {
                             Image(systemName: "bookmark")
                                .imageScale(.medium)
                                .foregroundColor(.red)
                                .accessibility(identifier: "bookmark")
                        }
                    }
                     
...
