//
//  VisitedDemoAppUITests.swift
//  VisitedDemoAppUITests
//
//  Created by Farros Mufid on 12/6/20.
//  Copyright © 2020 Farros Mufid. All rights reserved.
//

import XCTest

class VisitedDemoAppUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testChangingHomeVisitedAlsoChangedListViewVisited() throws {
        // UI tests must launch the application that they test.
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        let app = XCUIApplication()
        app.launch()
        let firstTableIndex = app.tables.cells.buttons["Turtle Rock\nTwentynine Palms\nCalifornia\nFeatured\nYou have visited this place"]
        firstTableIndex.tap()
        let bookmark = app.buttons["bookmarkFill"]
        bookmark.tap()
        let backHome = app.navigationBars["Turtle Rock"].buttons["Visited"]
        backHome.tap()
        let moveTab = app.tabBars.children(matching: .button).element(boundBy: 1)
        moveTab.tap()
        let firstListView = app.tables/*@START_MENU_TOKEN@*/.cells.buttons["Turtle Rock"]/*[[".cells.buttons[\"Turtle Rock\"]",".buttons[\"Turtle Rock\"]"],[[[-1,1],[-1,0]]],[1]]@END_MENU_TOKEN@*/
        firstListView.tap()
        let bookmarkTappedTwice = app.buttons["bookmark"]
        bookmarkTappedTwice.tap()
        let backListView = app.navigationBars["Turtle Rock"].buttons["Places"]
        backListView.tap()
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
